# fb2converter

./: .gitignore  .golangci.yml  .ignore  11.epub  CMakeLists.txt  Makefile  PreLoad.cmake  README.md  Taskfile.yaml  build-all.sh  build-release.sh  fb2c.go  go.mod  go.sum
.ci/: .gitignore  Makefile  convert.py
.github/workflows/: build.yml  go.yml  pipeline.yml  release.yml
archive/: walker.go
cmake/: darwin.toolchain  darwin_amd64.toolchain  darwin_arm64.toolchain  pre-commit  sign.sh  version.go.in
cmd/fb2c/: main.go
cmd/fb2epub/: main.go
cmd/fb2mobi/: main.go
commands/: convert.go  dumpconfig.go  resources.go  synccovers.go  transfer.go  utils.go
config/: cfg.go  console_unix.go  console_windows.go  os_linux.go  os_mac.go  os_unix.go  os_windows.go
doc/: records.txt
docs/: cheat.pptx  records.txt
etree/: etree.go  etree_test.go  example.go  helpers.go  path.go
go-micro/: README.md
go-micro/config/: config.go  default.go  options.go  value.go
go-micro/config/encoder/hcl/: hcl.go
go-micro/config/encoder/json/: json.go
go-micro/config/encoder/toml/: toml.go
go-micro/config/encoder/xml/: xml.go
go-micro/config/encoder/yaml/: yaml.go
go-micro/config/loader/: loader.go
go-micro/config/loader/memory/: memory.go  options.go
go-micro/config/reader/: options.go  reader.go
go-micro/config/reader/json/: json.go  values.go
go-micro/config/source/: options.go
go-micro/config/source/file/: file.go  format.go  options.go  watcher.go  watcher_linux.go
go-micro/config/source/memory/: memory.go  options.go  watcher.go
hyphenator/: README  hyphen_trie.go  hyphenator.go  hyphenator_test.go  trie.go  trie_test.go
jpegquality/: LICENSE  README  jpegquality.go
processor/: book.go  context.go  datafile.go  enums.go  enums_string.go  epub.go  generate.go  helpers.go  hyph.go  imagefile.go  mobiazw3.go  process.go  sentences.go  sentences_test.go  stamp.go  templates.go  templates_test.go  textutils.go  textutils_test.go  thumbnail.go  xhtml.go  xmlutils.go  xmlutils_test.go
processor/internal/mobi/: reader.go  splitter.go  utils.go
reporter/: reporter.go
scripts/: pre-push
scripts/git/: pre-push
src/fb2converter/: go.mod  go.sum
src/fb2converter/archive/: walker.go
src/fb2converter/cmd/fb2c/: main.go
src/fb2converter/cmd/fb2epub/: main.go
src/fb2converter/cmd/fb2mobi/: main.go
src/fb2converter/commands/: convert.go  dumpconfig.go  resources.go  synccovers.go  utils.go
src/fb2converter/config/: cfg.go  console_unix.go  console_windows.go  os_linux.go  os_mac.go  os_windows.go
src/fb2converter/etree/: README  etree.go
src/fb2converter/hyphenator/: LICENSE  hyphenator.go  hyphenator_test.go  trie_test.go
src/fb2converter/processor/: book.go  context.go  datafile.go  enums.go  enums_string.go  epub.go  generate.go  helpers.go  imagefile.go  mobiazw3.go  process.go  sentences.go  stamp.go  textutils.go  textutils_test.go  xhtml.go  xmlutils.go
src/fb2converter/processor/internal/mobi/: reader.go  splitter.go  utils.go
src/fb2converter/state/: env.go
src/fb2converter/tools/: tools.go
state/: env.go
static/: assets.go  configuration.toml  doc.go
static/dictionaries/: _todo  build.sh
static/profiles/: default.azw3.css  default.css  default.kepub.css  default.mobi.css
static/sentences/: _todo  build.sh  todo
tools/: tools.go
